import org.jetbrains.kotlin.gradle.dsl.JvmTarget
import org.jetbrains.kotlin.gradle.tasks.KotlinJvmCompile

plugins {
    id 'application'
    id 'idea'
    id 'java'
    id 'java-test-fixtures'
    id 'jacoco'
    alias(libs.plugins.kotlin.jvm)
    alias(libs.plugins.kotlin.serialization)
    alias(libs.plugins.kotlin.spring)
    alias(libs.plugins.spring.boot)
    alias(libs.plugins.spring.dependency.management)
    alias(libs.plugins.sonarqube)
    alias(libs.plugins.axion.release)
    alias(libs.plugins.beryx.runtime)
    alias(libs.plugins.jmh)
}

// JavaFX is consumed as platform modules from the JDK (BellSoft Liberica Full /
// 'jdk+fx' on CI). The Beryx jpackage step jlinks the javafx.* modules into the
// trimmed runtime — see gradle/packaging.gradle. No org.openjfx classpath JARs.

repositories {
    mavenLocal()
    mavenCentral()
}

dependencies {
    api libs.kotlin.stdlib

    implementation platform(libs.kotlin.bom)

    implementation(libs.bundles.music.commons)
    implementation libs.lirp.core
    implementation libs.lirp.sql

    implementation libs.spring.boot
    implementation libs.spring.boot.starter.logging
    // Spring Boot 4.0.5's bare 'spring-boot' artifact does not pull snakeyaml
    // transitively (only spring-boot-starter does). YamlPropertySourceLoader needs
    // it on the classpath at startup to load application.yml; version is managed
    // by the Spring Boot dependency-management plugin.
    implementation libs.snakeyaml

    implementation libs.bundles.javafx.weaver
    implementation libs.controlsfx
    implementation libs.easybind
    implementation libs.nsmenufx

    implementation libs.kotlinx.coroutines.core
    implementation libs.kotlinx.coroutines.javafx
    implementation libs.kotlinx.serialization.json
    implementation libs.kotlin.logging.jvm

    implementation libs.bundles.jackson
    implementation libs.jaudiotagger

    implementation libs.commons.lang3
    implementation libs.commons.io
    implementation libs.nv.i18n
    implementation libs.jakarta.annotation
}

kotlin {
    jvmToolchain(24)
}

scmVersion {
    tag {
        prefix = 'v'
    }
    useHighestVersion = true
    ignoreUncommittedChanges = false
    versionIncrementer 'incrementMinor'
}

group = 'net.transgressoft'
version = scmVersion.version
description = 'musicott'

// Generate META-INF/build-info.properties at build time so Spring's BuildProperties
// bean is autoconfigured. AboutWindowAlert reads buildProperties.getVersion() to
// display the runtime version (sourced from scmVersion.version above) instead of
// a hardcoded literal.
springBoot {
    buildInfo()
}

// Stabilise transitive kotlinx versions — Spring Boot's kotlin BOM and music-commons can
// otherwise pull conflicting coroutines/serialization releases into the runtime classpath.
// Also strip transitive org.openjfx:javafx-* JARs: with Liberica Full / 'jdk+fx' the JDK
// already exposes JavaFX as platform modules and the older 21.x classpath JARs that
// music-commons drags in would otherwise shadow them and trigger 'Unsupported JavaFX
// configuration: classes were loaded from unnamed module' warnings.
configurations.configureEach {
    exclude group: 'org.openjfx'

    resolutionStrategy.eachDependency { DependencyResolveDetails details ->
        if (details.requested.group == 'org.jetbrains.kotlinx' && details.requested.name.startsWith('kotlinx-coroutines')) {
            details.useVersion('1.11.0')
        }
        if (details.requested.group == 'org.jetbrains.kotlinx' && details.requested.name.startsWith('kotlinx-serialization')) {
            details.useVersion('1.11.0')
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.compilerArgs << '-Xlint:unchecked' << '-Xlint:deprecation'
}

tasks.withType(ProcessResources).configureEach {
    duplicatesStrategy = DuplicatesStrategy.INCLUDE
}

tasks.withType(KotlinJvmCompile).configureEach {
    compilerOptions {
        jvmTarget.set(JvmTarget.JVM_24)
        freeCompilerArgs.add('-Xjsr305=strict')
        freeCompilerArgs.add('-Xjvm-default=all')
    }
}

jmh {
    jvmArgs        = ['-Xmx2g']
    fork           = 1
    warmupIterations = 1
    iterations     = 3
    resultFormat   = 'JSON'
    resultsFile    = layout.buildDirectory.file("reports/jmh/results.json").get().asFile
    // 'jfr' captures a per-benchmark flight recording alongside the gc profiler for
    // allocation-hotspot analysis; results land under build/reports/jmh and a profile.jfr
    // directory per benchmark.
    profilers      = ['gc', 'jfr']
}

apply from: 'gradle/test-suites.gradle'
apply from: 'gradle/packaging.gradle'
apply from: 'gradle/sonar.gradle'
